--- a/ספקים.html
+++ b/ספקים.html
@@ -290,7 +290,7 @@
                 <h1>ספקים</h1>
                 <div class="search-bar">
                     <i class="fas fa-search"></i>
-                    <input type="text" placeholder="חיפוש ספקים...!" id="searchInput">
+                    <input type="text" placeholder="חיפוש ספקים...!!!" id="searchInput">
                 </div>
             </div>
             <div id="customerGrid" class="customer-grid">
@@ -384,7 +384,7 @@
 
             // Add logo
             const logo = new Image();
-            logo.src = 'https://zevis-ai.github.io/GPI/path/to/logo.png'; // החלף עם הנתיב ללוגו שלך
+            logo.src = 'https://assets.workoscdn.com/app-branding/environment_01GS6W3C901N50J4ZGFB6V1Z6C/01HZ3C68S32DEFKTDAYKX864DE'; // החלף עם הנתיב ללוגו שלך
             logo.onload = () => {
                 doc.addImage(logo, 'PNG', 10, 10, 50, 50); // מיקום וגודל הלוגו ב-PDF
 
