--- a/ספקים.html
+++ b/ספקים.html
@@ -384,7 +384,7 @@
 
             // Add logo
             const logo = new Image();
-            logo.src = 'https://assets.workoscdn.com/app-branding/environment_01GS6W3C901N50J4ZGFB6V1Z6C/01HZ3C68S32DEFKTDAYKX864DE'; // החלף עם הנתיב ללוגו שלך
+            logo.src = '1MDmfXGAkrg7IgM_FAELu.png'; // החלף עם הנתיב ללוגו שלך
             logo.onload = () => {
                 doc.addImage(logo, 'PNG', 10, 10, 50, 50); // מיקום וגודל הלוגו ב-PDF
 
