--- a/ספקים.html
+++ b/ספקים.html
@@ -290,7 +290,7 @@
                 <h1>ספקים</h1>
                 <div class="search-bar">
                     <i class="fas fa-search"></i>
-                    <input type="text" placeholder="חיפוש ספקים...!!!" id="searchInput">
+                    <input type="text" placeholder="חיפוש ספקים..." id="searchInput">
                 </div>
             </div>
             <div id="customerGrid" class="customer-grid">
