--- a/ספקים.html
+++ b/ספקים.html
@@ -384,7 +384,7 @@
 
             // Add logo
             const logo = new Image();
-            logo.src = '1MDmfXGAkrg7IgM_FAELu.png'; // החלף עם הנתיב ללוגו שלך
+            logo.src = '1000181465-512x512.png'; // החלף עם הנתיב ללוגו שלך
             logo.onload = () => {
                 doc.addImage(logo, 'PNG', 10, 10, 50, 50); // מיקום וגודל הלוגו ב-PDF
 
