--- a/ספקים.html
+++ b/ספקים.html
@@ -462,7 +462,7 @@
                 const linkText = "www.gpiluxury.com/quote";
                 const linkX = 105 - (doc.getTextWidth(linkText) / 2);
                 doc.setTextColor(3, 218, 198);
-                doc.textWithLink(linkText, linkX, 288, { url: 'https://www.gpiluxury.com/quote' });
+                doc.textWithLink(linkText, linkX, 288, { url: 'נתינת הצעת מחיר.html' });
 
                 // Save the PDF
                 doc.save(`GPI_Luxury_${category}_${id}.pdf`);
