--- a/ספקים.html
+++ b/ספקים.html
@@ -651,7 +651,7 @@
     
     <!-- Floating profile picture and menu -->
     <div class="profile-container">
-        <img src="default-profile.png" alt="תמונת פרופיל" class="profile-picture" id="profile-picture">
+        <img src="1000181465-512x512.png" alt="תמונת פרופיל" class="profile-picture" id="profile-picture">
         <div class="profile-menu" id="profile-menu">
             <div class="profile-menu-header">
                 <img src="default-profile.png" alt="תמונת פרופיל" class="profile-menu-picture" id="profile-menu-picture">
