--- a/ספקים.html
+++ b/ספקים.html
@@ -466,7 +466,7 @@
 
             const exportPdfBtn = document.createElement('button');
             exportPdfBtn.className = 'export-pdf-btn';
-            exportPdfBtn.innerHTML = '<i class="fas fa-file-pdf"></i> ייצוא ל-PDF';
+            exportPdfBtn.innerHTML = '<i class="fas fa-file-pdf"></i>קבלת פרטי ההזמנה ושליחת הצעת מחיר-PDF';
             exportPdfBtn.onclick = () => exportToPdf(id, data, category);
 
             const shareBtn = document.createElement('button');
