--- a/כל-ההזמנות.html
+++ b/כל-ההזמנות.html
@@ -466,12 +466,28 @@
                 }
             }
 
-             function exportToPdf(id, data, category) {
+            const exportPdfBtn = document.createElement('button');
+            exportPdfBtn.className = 'export-pdf-btn';
+            exportPdfBtn.innerHTML = '<i class="fas fa-file-pdf"></i> ייצוא ל-PDF';
+            exportPdfBtn.onclick = () => exportToPdf(id, data, category);
+
+            const shareBtn = document.createElement('button');
+            shareBtn.className = 'share-btn';
+            shareBtn.innerHTML = '<i class="fas fa-share-alt"></i> שיתוף';
+            shareBtn.onclick = () => shareData(id, data, category);
+
+            card.innerHTML = content;
+            card.appendChild(exportPdfBtn);
+            card.appendChild(shareBtn);
+            return card;
+        }
+
+        function exportToPdf(id, data, category) {
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
 
-            // Add luxury header with gradient
-            const gradient = doc.setFillColor(98, 0, 234);
+            // Add luxury header
+            doc.setFillColor(98, 0, 234); // Primary color
             doc.rect(0, 0, 210, 60, 'F');
             doc.setTextColor(3, 218, 198); // Secondary color
             doc.setFont("helvetica", "bold");
@@ -481,94 +497,72 @@
             doc.setTextColor(255, 255, 255); // White
             doc.text("Exclusive Order Details", 105, 45, null, null, "center");
 
-            // Add logo
-            const logo = new Image();
-            logo.src = '1000181465-512x512.png'; // החלף עם הנתיב ללוגו שלך
-            logo.onload = () => {
-             doc.addImage(logo, 'PNG', 10, 10, 50, 50, null, 'FAST', 0, 'circle'); // מיקום וגודל הלוגו ב-PDF עם מסגרת עגולה
+            // Add accent line
+            doc.setDrawColor(3, 218, 198);
+            doc.setLineWidth(4);
+            doc.line(15, 65, 195, 65);
 
-                // Add accent line with shadow
-                doc.setDrawColor(3, 218, 198);
-                doc.setLineWidth(4);
-                doc.setLineDash([5, 5], 0);
-                doc.line(15, 65, 195, 65);
+            // Add order details header
+            doc.setTextColor(98, 0, 234);
+            doc.setFontSize(26);
+            doc.setFont("helvetica", "bold");
+            doc.text("Price Quote Request", 105, 85, null, null, "center");
 
-                // Add order details header with shadow
-                doc.setTextColor(98, 0, 234);
-                doc.setFontSize(26);
-                doc.setFont("helvetica", "bold");
-                doc.text("Price Quote Request", 105, 85, null, null, "center");
+            // Add category and ID
+            doc.setFontSize(20);
+            doc.setTextColor(3, 218, 198);
+            doc.text(`${category} - ${id}`, 105, 100, null, null, "center");
 
-                // Add category and ID with shadow
-                doc.setFontSize(20);
-                doc.setTextColor(3, 218, 198);
-                doc.text(`${category} - ${id}`, 105, 100, null, null, "center");
+            // Add content
+            doc.setTextColor(51, 51, 51);
+            doc.setFontSize(12);
+            doc.setFont("helvetica", "normal");
+            let yPosition = 120;
 
-                // Add content with alternating row colors
-                doc.setTextColor(51, 51, 51);
-                doc.setFontSize(12);
-                doc.setFont("helvetica", "normal");
-                let yPosition = 120;
-                let isAlternate = false;
-
-                for (let key in data) {
-                    if (key !== 'email' && key !== 'phone') {
-                        if (typeof data[key] === 'object') {
-                            doc.setFont("helvetica", "bold");
-                            doc.text(`${key}:`, 20, yPosition);
+            for (let key in data) {
+                if (key !== 'email' && key !== 'phone') {
+                    if (typeof data[key] === 'object') {
+                        doc.setFont("helvetica", "bold");
+                        doc.text(`${key}:`, 20, yPosition);
+                        yPosition += 10;
+                        doc.setFont("helvetica", "normal");
+                        for (let subKey in data[key]) {
+                            doc.text(`${subKey}: ${data[key][subKey]}`, 30, yPosition);
                             yPosition += 10;
-                            doc.setFont("helvetica", "normal");
-                            for (let subKey in data[key]) {
-                                if (isAlternate) {
-                                    doc.setFillColor(245, 245, 245);
-                                    doc.rect(15, yPosition - 8, 180, 10, 'F');
-                                }
-                                doc.text(`${subKey}: ${data[key][subKey]}`, 30, yPosition);
-                                yPosition += 10;
-                                isAlternate = !isAlternate;
-                            }
-                        } else {
-                            if (isAlternate) {
-                                doc.setFillColor(245, 245, 245);
-                                doc.rect(15, yPosition - 8, 180, 10, 'F');
-                            }
-                            doc.setFont("helvetica", "bold");
-                            doc.text(`${key}:`, 20, yPosition);
-                            doc.setFont("helvetica", "normal");
-                            doc.text(`${data[key]}`, 70, yPosition);
-                            yPosition += 10;
-                            isAlternate = !isAlternate;
                         }
+                    } else {
+                        doc.setFont("helvetica", "bold");
+                        doc.text(`${key}:`, 20, yPosition);
+                        doc.setFont("helvetica", "normal");
+                        doc.text(`${data[key]}`, 70, yPosition);
+                        yPosition += 10;
+                    }
 
-                        if (yPosition > 260) {
-                            doc.addPage();
-                            yPosition = 20;
-                        }
+                    if (yPosition > 260) {
+                        doc.addPage();
+                        yPosition = 20;
                     }
                 }
+            }
 
-                // Add stylish footer with gradient
-                const footerGradient = doc.setFillColor(98, 0, 234);
-                doc.rect(0, 272, 210, 25, 'F');
+            // Add stylish footer
+            doc.setFillColor(98, 0, 234);
+            doc.rect(0, 272, 210, 25, 'F');
 
-                // Add "Click here" text with shadow
-                doc.setTextColor(255, 255, 255);
-                doc.setFontSize(12);
-                doc.setFont("helvetica", "bold");
-                doc.text("To submit a price quote or add comments, click here:", 105, 280, null, null, "center");
+            // Add "Click here" text
+            doc.setTextColor(255, 255, 255);
+            doc.setFontSize(12);
+            doc.setFont("helvetica", "bold");
+            doc.text("To submit a price quote or add comments, click here:", 105, 280, null, null, "center");
 
-                // Add hyperlink with shadow
-                const linkText = "To submit a quote click here";
-                const linkX = 105 - (doc.getTextWidth(linkText) / 2);
-                doc.setTextColor(3, 218, 198);
-                doc.textWithLink(linkText, linkX, 288, { url: 'https://zevis-ai.github.io/GPI/%D7%A0%D7%AA%D7%99%D7%A0%D7%AA%20%D7%94%D7%A6%D7%A2%D7%AA%20%D7%9E%D7%97%D7%99%D7%A8.html' });
+            // Add hyperlink
+            const linkText = "www.gpiluxury.com/quote";
+            const linkX = 105 - (doc.getTextWidth(linkText) / 2);
+            doc.setTextColor(3, 218, 198);
+            doc.textWithLink(linkText, linkX, 288, { url: 'https://www.gpiluxury.com/quote' });
 
-                // Save the PDF
-                doc.save(`GPI_Luxury_${category}_${id}.pdf`);
-            };
-            logo.onerror = () => {
-                console.error('Failed to load logo image');
-            };
+            // Save the PDF
+            doc.save(`GPI_Luxury_${category}_${id}.pdf`);
         }
 
         function shareData(id, data, category) {
