--- a/ספקים.html
+++ b/ספקים.html
@@ -347,7 +347,7 @@
     <div class="dashboard">
         <div class="top-bar">
             <button class="menu-toggle"><i class="fas fa-bars"></i></button>
-            <div class="logo">GPI ניהול</div>
+            <div class="logo">GPI ספקים</div>
         </div>
         <div class="sidebar">
             <button class="close-sidebar"><i class="fas fa-times"></i></button>
