--- a/נתינת הצעת מחיר.html
+++ b/נתינת הצעת מחיר.html
@@ -11,14 +11,16 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
         :root {
-            --primary-color: #1e88e5;
-            --secondary-color: #ff6d00;
-            --text-color: #333;
-            --bg-color: #f5f5f5;
+            --primary-color: #4caf50;
+            --secondary-color: #ff9800;
+            --text-color: #212121;
+            --bg-color: #e0f7fa;
             --card-bg: #ffffff;
-            --sidebar-width: 280px;
-            --border-radius: 12px;
+            --sidebar-width: 250px;
+            --border-radius: 8px;
             --transition: all 0.3s ease;
+            --box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            --hover-box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         }
 
         * {
@@ -42,22 +44,22 @@
 
         .sidebar {
             width: var(--sidebar-width);
-            background: linear-gradient(145deg, var(--primary-color), #1565c0);
+            background: var(--primary-color);
             color: white;
-            padding: 30px;
+            padding: 20px;
             transition: var(--transition);
-            box-shadow: 2px 0 10px rgba(0,0,0,0.1);
+            box-shadow: var(--box-shadow);
         }
 
         .sidebar-header {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
         }
 
         .sidebar-header h2 {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             font-weight: 700;
         }
 
@@ -66,7 +68,7 @@
         }
 
         .sidebar-menu li {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .sidebar-menu a {
@@ -75,25 +77,25 @@
             display: flex;
             align-items: center;
             transition: var(--transition);
-            font-size: 1.1rem;
-            padding: 10px 15px;
+            font-size: 1rem;
+            padding: 8px 12px;
             border-radius: var(--border-radius);
         }
 
         .sidebar-menu a:hover {
             background-color: rgba(255,255,255,0.1);
-            transform: translateX(-5px);
+            transform: translateX(-3px);
         }
 
         .sidebar-menu i {
-            margin-left: 15px;
-            width: 20px;
+            margin-left: 10px;
+            width: 18px;
             text-align: center;
         }
 
         .main-content {
             flex: 1;
-            padding: 40px;
+            padding: 30px;
             transition: var(--transition);
         }
 
@@ -101,11 +103,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
         }
 
         .header h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             color: var(--primary-color);
             font-weight: 700;
         }
@@ -114,22 +116,22 @@
             display: flex;
             align-items: center;
             background-color: var(--card-bg);
-            border-radius: 30px;
-            padding: 10px 20px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            border-radius: 20px;
+            padding: 8px 16px;
+            box-shadow: var(--box-shadow);
             transition: var(--transition);
         }
 
         .search-bar:focus-within {
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            box-shadow: var(--hover-box-shadow);
         }
 
         .search-bar input {
             border: none;
             outline: none;
-            padding: 10px;
-            font-size: 1rem;
-            width: 300px;
+            padding: 8px;
+            font-size: 0.9rem;
+            width: 250px;
             background: transparent;
         }
 
@@ -137,7 +139,7 @@
             background: none;
             border: none;
             cursor: pointer;
-            font-size: 1.2rem;
+            font-size: 1rem;
             color: var(--primary-color);
             transition: var(--transition);
         }
@@ -148,42 +150,42 @@
 
         .orders-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-            gap: 30px;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
         }
 
         .order-card {
             background-color: var(--card-bg);
             border-radius: var(--border-radius);
-            padding: 25px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            padding: 20px;
+            box-shadow: var(--box-shadow);
             transition: var(--transition);
         }
 
         .order-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 15px rgba(0,0,0,0.15);
+            transform: translateY(-3px);
+            box-shadow: var(--hover-box-shadow);
         }
 
         .order-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px;
-            padding-bottom: 15px;
-            border-bottom: 1px solid #e0e0e0;
+            margin-bottom: 15px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #bdbdbd;
         }
 
         .order-number {
             font-weight: bold;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             color: var(--primary-color);
         }
 
         .order-status {
-            padding: 6px 12px;
-            border-radius: 20px;
-            font-size: 0.9rem;
+            padding: 4px 10px;
+            border-radius: 15px;
+            font-size: 0.8rem;
             font-weight: 500;
             text-transform: uppercase;
         }
@@ -199,19 +201,19 @@
         }
 
         .order-details {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .order-details span {
             display: block;
-            margin-bottom: 10px;
-            font-size: 0.95rem;
+            margin-bottom: 8px;
+            font-size: 0.9rem;
         }
 
         .order-details i {
-            margin-left: 10px;
+            margin-left: 8px;
             color: var(--primary-color);
-            width: 20px;
+            width: 18px;
             text-align: center;
         }
 
@@ -221,13 +223,13 @@
         }
 
         .btn {
-            padding: 10px 20px;
+            padding: 8px 16px;
             border: none;
             border-radius: var(--border-radius);
             cursor: pointer;
             transition: var(--transition);
             font-weight: 500;
-            font-size: 1rem;
+            font-size: 0.9rem;
             text-transform: uppercase;
         }
 
@@ -243,7 +245,7 @@
 
         .btn:hover {
             opacity: 0.9;
-            transform: translateY(-2px);
+            transform: translateY(-1px);
         }
 
         .modal {
@@ -266,23 +268,23 @@
         .modal-content {
             background-color: var(--card-bg);
             margin: 10% auto;
-            padding: 30px;
+            padding: 20px;
             border-radius: var(--border-radius);
             width: 50%;
-            max-width: 500px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            max-width: 400px;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.3);
             animation: slideIn 0.3s;
         }
 
         @keyframes slideIn {
-            from { transform: translateY(-50px); opacity: 0; }
+            from { transform: translateY(-30px); opacity: 0; }
             to { transform: translateY(0); opacity: 1; }
         }
 
         .close {
             color: #aaa;
             float: left;
-            font-size: 28px;
+            font-size: 24px;
             font-weight: bold;
             cursor: pointer;
             transition: var(--transition);
@@ -293,7 +295,7 @@
         }
 
         .modal-header {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .modal-header h2 {
@@ -301,7 +303,7 @@
         }
 
         .modal-body {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .modal-footer {
@@ -315,24 +317,24 @@
 
         #quoteForm input, #quoteForm textarea,
         #commentForm input, #commentForm textarea {
-            margin-bottom: 15px;
-            padding: 12px;
+            margin-bottom: 10px;
+            padding: 10px;
             border: 1px solid #ddd;
             border-radius: var(--border-radius);
-            font-size: 1rem;
+            font-size: 0.9rem;
             transition: var(--transition);
         }
 
         #quoteForm input:focus, #quoteForm textarea:focus,
         #commentForm input:focus, #commentForm textarea:focus {
             border-color: var(--primary-color);
-            box-shadow: 0 0 0 2px rgba(30, 136, 229, 0.2);
+            box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.2);
         }
 
         @media (max-width: 1024px) {
             .sidebar {
-                width: 80px;
-                padding: 20px 10px;
+                width: 70px;
+                padding: 15px 5px;
             }
 
             .sidebar-header h2, .sidebar-menu span {
@@ -340,15 +342,15 @@
             }
 
             .main-content {
-                padding: 20px;
+                padding: 15px;
             }
 
             .orders-grid {
-                grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             }
 
             .modal-content {
-                width: 90%;
+                width: 80%;
             }
         }
 
@@ -362,7 +364,7 @@
                 position: fixed;
                 bottom: 0;
                 z-index: 100;
-                padding: 10px;
+                padding: 5px;
             }
 
             .sidebar-menu {
@@ -375,7 +377,7 @@
             }
 
             .main-content {
-                margin-bottom: 60px;
+                margin-bottom: 50px;
             }
 
             .header {
@@ -384,7 +386,7 @@
             }
 
             .search-bar {
-                margin-top: 20px;
+                margin-top: 15px;
             }
 
             .search-bar input {
@@ -415,7 +417,7 @@
         </aside>
         <main class="main-content">
             <header class="header">
-                <h1>הזמנות פתוחות</h1>
+                <h1> הגשת הצעות מחיר</h1>
                 <div class="search-bar">
                     <input type="text" placeholder="חיפוש הזמנות...">
                     <button><i class="fas fa-search"></i></button>
